test/typeerrors/ex24.act
# TODO: error should print line numbers

def foo():
    a : ?str = ""
    b: dict[str, str] = {}
    b[a] = "hej"
